Added one interface function for the Maze interface :P

--- a/vanessau_diary.html
+++ b/vanessau_diary.html
@@ -12,3 +12,7 @@ First meeting.
 -- Davina: GUI flow, help page
 -- Vanessa: DFS maze generation, incl. boost generation
 -- Oliver: Player control
+
+6th May, 2014
+=============
+Attempted to write up some of the Maze interface, but this was difficult without knowing what everyone else thought they'd require so I decided to wait until our next meeting or conversation.
